--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 */12 * * *" # Runs exactly every 12 hours
+    - cron: "0 */12 * * *" # Runs every 12 hours
   workflow_dispatch:
   push:
     branches:
@@ -25,7 +25,7 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github-dark
+          outputs: dist/snake.svg?palette=dracula&color_snake=#ff4500,#ff8c00,#ffd700,#9acd32,#20b2aa,#1e90ff,#9932cc&speed=3&frame_duration=50
 
       - name: Cache Snake SVG for Faster Builds
         uses: actions/cache@v3
