--- a/.github/workflows/pacman.yml
+++ b/.github/workflows/pacman.yml
@@ -1,52 +1,33 @@
-name: Generate Pac-Man Animation
+name: Generate pacman animation
 
 on:
-  schedule:
-    - cron: "0 */12 * * *" # Runs every 12 hours
+  schedule: # execute every 12 hours
+    - cron: "* */12 * * *"
+
   workflow_dispatch:
+
   push:
     branches:
-      - main
-
-permissions:
-  contents: write
+    - main
 
 jobs:
-  generate_pacman_animation:
+  generate:
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Create Output Directory
-        run: mkdir -p dist
-
-      - name: Generate pacman-contribution-graph.svg
+      - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
           github_user_name: ${{ github.repository_owner }}
-          theme: dracula
-          background: transparent
-          pacman_color: "#FFD700"
-          ghost_color: "#FF4500,#1E90FF,#9932CC,#32CD32"
-          speed: 2
-          frame_duration: 60
 
-      - name: Move File to `dist/`
-        run: mv pacman-contribution-graph.svg dist/ || echo "File not found"
 
-      - name: Debugging - List Files
-        run: ls -R dist
-
-      - name: Commit and Push Updates
+      - name: push pacman-contribution-graph.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Success Message
-        run: echo "Pac-Man animation updated successfully!"
